corrected height and removed scrollbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     background-color:#99c9ff;
     background-image:
